2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/refer.cpp (do_file): Fix another off-by-one
	line number reporting bug exposed by fix for Savannah #62391.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/tests/report-correct-line-numbers.sh: Add
	more regression tests.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor: boolify.

	* src/preproc/refer/command.cpp (input_stack::push_file): Demote
	and rename local variable from `int` to `bool`.
	(bol): Renamed from this...
	(is_at_beginning_of_line): ...to this.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor.

	* src/preproc/refer/command.cpp (input_stack::push_file):
	* src/preproc/refer/refer.cpp (do_file): Drop unnecessary
	construction of integer from integer (return type of `getc()`)
	in argument to error diagnostic functions; parallelizes with
	other diagnostic function calls.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/command.cpp: Refactor to simplify.
	(get_location): Demote return type from `int` to `void`.  The
	function only ever returned a `1` literal.
	(input_stack::error): Update call site to stop uselessly testing
	return value of `get_location()`.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (dist-info-bits, install_infodoc, dist-gnueps): Fix
	logic error.  When checking both source and build trees for
	files to copy, break after successfully copying the files, not
	after the first iteration of the loop unconditionally.  This
	caused the Info documents not to be installed from out-of-tree
	builds, and potentially would prevent them and doc/gnu.eps from
	being included in the distribution archive if for some reason
	they didn't build and that build failure were not treated as an
	error.  Problems introduced by me in commits e78bd20d54, 27